# jannah-sms

./: .dockerignore  .editorconfig  .env.example  .env.goodtenant  .gitignore  .pre-commit-config.yaml  .pylintrc  DEPLOYMENT.md  Dockerfile  JannahSMSTestContacts.csv  Readme.md  THEMING.md  app.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  theme_switcher.py  vercel.json
api/: index.py
app/: __init__.py  main.py
app/api/v1/: __init__.py  auth.py  messages.py  schedules.py  tenants.py  users.py  webhooks.py
app/core/: config.py  database.py  security.py  templates.py
app/models/: message.py  schedule.py  tenant.py  user.py
app/services/: condition_service.py  scheduler_service.py  sms_service.py
app/static/css/: main.css
app/templates/: base.html  dashboard.html  error.html  login.html  messages.html  schedule_details.html  schedule_form.html  schedules.html  tenant_form.html  tenant_import.html  tenants.html  users.html
app/templates/components/forms/: datetime_picker.html
app/utils/: __init__.py  init_admin.py
app/web/: __init__.py  auth.py  dashboard.py  messages.py  schedules.py  tenants.py  users.py
jannah-sms-fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
jannah-sms-fastapi/app/: __init__.py  main.py
jannah-sms-fastapi/app/api/v1/: __init__.py  messages.py  tenants.py
jannah-sms-fastapi/app/core/: config.py  database.py  templates.py
jannah-sms-fastapi/app/models/: message.py  tenant.py
jannah-sms-fastapi/app/services/: condition_service.py  sms_service.py
jannah-sms-fastapi/app/static/js/: main.js
jannah-sms-fastapi/app/templates/: base.html  dashboard.html  error.html  schedule_form.html  schedules.html  tenant_import.html
jannah-sms-fastapi/app/templates/components/forms/: datetime_picker.html
jannah-sms-fastapi/app/web/: __init__.py  dashboard.py  messages.py  schedules.py  tenants.py
jannah-sms-fastapi/tests/: test_hello.py
migrations/: add_sms_opt_in_fields.py
progress/: CLEANUP_SUMMARY.md  CONTINUATION_CONTEXT.md  PROJECT_STRUCTURE.md  SESSION_SUMMARY_2025-10-12.md  TEST_REPORT_2025-10-12.md  WEBHOOK_SETUP.md
tests/: test_hello.py
